deploy: 83502fe806d7ff63b02f741eedf5aa536d386174

--- a/print.html
+++ b/print.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introducción</a></li><li class="chapter-item expanded "><a href="intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="tema3/html/multimedia.html">Multimedia</a></li><li class="chapter-item expanded "><a href="tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 4</li><li class="chapter-item expanded "><a href="tema4/css/css.html">CSS</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tema4/css/sintaxis.html">Sintaxis</a></li><li class="chapter-item expanded "><a href="tema4/css/selectores.html">Selectores</a></li><li class="chapter-item expanded "><a href="tema4/css/pseudo.html">Pseudo-clases/elementos</a></li><li class="chapter-item expanded "><a href="tema4/css/modelovisual.html">Modelo visual</a></li><li class="chapter-item expanded "><a href="tema4/css/posicion.html">Posición</a></li><li class="chapter-item expanded "><a href="tema4/css/disposicion.html">Disposición</a></li><li class="chapter-item expanded "><a href="tema4/css/responsive.html">Diseño responsivo</a></li><li class="chapter-item expanded "><div>Pre-procesadores</div></li><li class="chapter-item expanded "><div>Bootstrap</div></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introducción</a></li><li class="chapter-item expanded "><a href="intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="tema3/html/multimedia.html">Multimedia</a></li><li class="chapter-item expanded "><a href="tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 4</li><li class="chapter-item expanded "><a href="tema4/css/css.html">CSS</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tema4/css/sintaxis.html">Sintaxis</a></li><li class="chapter-item expanded "><a href="tema4/css/selectores.html">Selectores</a></li><li class="chapter-item expanded "><a href="tema4/css/pseudo.html">Pseudo-clases/elementos</a></li><li class="chapter-item expanded "><a href="tema4/css/modelovisual.html">Modelo visual</a></li><li class="chapter-item expanded "><a href="tema4/css/posicion.html">Posición</a></li><li class="chapter-item expanded "><a href="tema4/css/disposicion.html">Disposición</a></li><li class="chapter-item expanded "><a href="tema4/css/responsive.html">Diseño responsivo</a></li><li class="chapter-item expanded "><a href="tema4/css/preprocesadores.html">Pre-procesadores</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 5</li><li class="chapter-item expanded "><a href="tema5/js/js.html">JS</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -743,7 +743,7 @@ fromEvent(button, "click")
 <ol>
 <li>Desde tu cuenta en Github <a href="https://github.com/codespaces/new">crea</a> un Codespace en el repo <code>github/codespaces-blank</code> y arráncalo.</li>
 <li>En el terminal del Codespace ejecuta:
-<pre><code class="language-bash">sudo apt update &amp;&amp; sudo apt install -y telnet netcat
+<pre><code class="language-bash">sudo apt update ; sudo apt install -y telnet netcat
 </code></pre>
 </li>
 </ol>
@@ -871,9 +871,9 @@ otra parte
 </li>
 <li>
 <p>Hasta ahora, hemos usado HTTP 1.0 y 1.1. HTTP 2 y 3 son protocolos binarios y HTTP/3 no usa TCP por lo que no podemos probarlo con <code>telnet</code>. Además, no todos los clientes y servidores los implementan por lo que para usarlos se necesita negociar el protocolo previamente mediante HTTP o TLS. Ejecuta los siguientes comandos:</p>
-<pre><code class="language-bash"># ... negociación vía HTTP/1.1 ...
+<pre><code class="language-bash"># Negociación vía HTTP/1.1:
 curl http://httpbin.org/anything -d &quot;12345&quot; -v --http2
-# ... negociación vía TLS/ALPN ...
+# Negociación vía TLS/ALPN:
 curl https://httpbin.org/anything -d &quot;12345&quot; -v --http2
 </code></pre>
 </li>
@@ -882,7 +882,7 @@ curl https://httpbin.org/anything -d &quot;12345&quot; -v --http2
 <p>Los métodos o verbos están definidos en la <a href="https://httpwg.org/specs/rfc9110.html#methods">especificación</a>. Los más comunes son <code>GET</code> y <code>POST</code>.</p>
 </div>
 <div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
-<p>La ruta al recurso se puede componer de <code>/path?query#fragment</code>, y la <code>query</code> a su vez se compone de <code>param1=value1&amp;param2=value2&amp;...</code>.</p>
+<p>La ruta al recurso se puede componer de <code>/path?query#fragment</code>, y la <code>query</code> a su vez se compone de <code>param1=value1&amp;param2=value2&amp;...</code>. Los parámetros de la &quot;query&quot; deben codificarse usando <a href="https://en.wikipedia.org/wiki/URL_encoding">URL encoding</a>.</p>
 </div>
 <div class="footnote-definition" id="3"><sup class="footnote-definition-label">3</sup>
 <p>Cada &quot;chunk&quot; se envía indicando primero su longitud en hexadecimal y después su contenido en una nueva línea. Para finalizar se envía un &quot;chunk&quot; vacío: <code>0\r\n\r\n</code>.</p>
@@ -949,7 +949,7 @@ Authorization: Basic dXNlcjpwYXNz
 </blockquote>
 </li>
 <li>
-<p>Los errores <code>5xx</code> corresponden a problemas en el servidor, como servidor sobrecargado o errores de implementación del servicio. Usa este <code>telnet</code> para hacer las siguientes peticiones:</p>
+<p>Los errores <code>5xx</code> corresponden a problemas en el servidor, como servidor sobrecargado o errores de implementación del servicio. Usa este <code>telnet</code> para hacer la siguiente petición:</p>
 <pre><code class="language-bash">telnet httpbin.org 80
 </code></pre>
 <pre><code class="language-http">GET /delay/invalid HTTP/1.0
@@ -1110,7 +1110,7 @@ Content-Length: 278
 </code></pre>
 <p>La página muestra las cookies que JS es capaz de leer. Además, vía JS añadimos una cookie. El botón &quot;Submit&quot; enviará una nueva petición al servidor pero a otra ruta. Antes de enviar, vuelve a hacer el <strong>paso 1</strong> de la página anterior.</p>
 <blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>¿Por qué JS solo ve una cookie? ¿Por qué se envía la cookie con <code>Path</code>? ¿Se envían al servidor las cookies creadas con JS?</em></p>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Por qué JS no ve todas las cookies? ¿Cuándo se reenvía la cookie con <code>Path</code> al servidor? ¿Se reenvían al servidor las cookies creadas con JS?</em></p>
 </blockquote>
 </li>
 </ol>
@@ -2287,6 +2287,144 @@ body * {
 <div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
 <p>Cada navegador tiene un tamaño de letra razonable para las dimensiones del dispositivo en el que se ejecuta. Además, el usuario puede establecer otro tamaño que se ajuste más a sus necesidades. Utilizar este tamaño como referencia para la página web suele ser lo más adecuado.</p>
 </div>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="css-8"><a class="header" href="#css-8">CSS</a></h1>
+<h2 id="pre-procesadores"><a class="header" href="#pre-procesadores">Pre-procesadores</a></h2>
+<p>Una web puede tener muchos estilos, que deberán ser consistentes cuando cambien. Para facilitar su mantenimiento, se han creado herramientas que permiten escribir las reglas de forma más modular o programática. La más usada es <a href="https://sass-lang.com/">Sass</a> que utiliza la sintaxis SCSS (<code>.scss</code>) para extender el lenguaje CSS. Los navegadores solo entienden CSS, por lo que para usar estas extensiones es necesario pre-procesar (o compilar) sus ficheros y convertirlos a CSS antes de desplegar la web<sup class="footnote-reference"><a href="#1">1</a></sup>.</p>
+<p>Algunas de las características de Sass son <strong>similares</strong> a otras de CSS:</p>
+<details><summary>Variables SCSS</summary>
+<pre><code class="language-scss">/* SCSS */
+$fuente-principal: Helvetica, sans-serif;
+p { font: 100% $fuente-principal; }
+</code></pre>
+</details>
+<details><summary>Variables CSS</summary>
+<pre><code class="language-css">/* CSS */
+html { --fuente-principal: Helvetica, sans-serif; }
+p { font: 100% var(--fuente-principal); }
+</code></pre>
+</details>
+<details><summary>Selector de hijos SCSS</summary>
+<pre><code class="language-scss">/* SCSS */
+nav {
+  li { display: inline-block; }
+}
+</code></pre>
+</details>
+<details><summary>Selector de hijos CSS</summary>
+<pre><code class="language-css">/* CSS */
+nav li { display: inline-block; }
+</code></pre>
+</details>
+<details><summary>Módulos SCSS</summary>
+<pre><code class="language-scss">/* SCSS: hay otro fichero _base.scss */
+@use 'base';
+/* Aquí otras reglas SCSS */
+</code></pre>
+</details>
+<details><summary>Módulos CSS</summary>
+<pre><code class="language-css">/* CSS: hay otro fichero base.css */
+@import 'base.css';
+/* Aquí otras reglas CSS */
+</code></pre>
+</details>
+<details><summary>Herencia SCSS</summary>
+<pre><code class="language-scss">/* SCSS */
+%message-common {
+ border: 1px solid #ccc;
+ padding: 10px;
+ color: #333;
+}
+.mensaje {
+  @extend %message-common;
+}
+.exito {
+  @extend %message-common;
+  border-color: green;
+}
+.error {
+  @extend %message-common;
+  border-color: red;
+}
+</code></pre>
+</details>
+<details><summary>Herencia CSS</summary>
+<pre><code class="language-css">/* CSS */
+.mensaje, .exito, .error {
+ border: 1px solid #ccc;
+ padding: 10px;
+ color: #333;
+}
+.exito { border-color: green; }
+.error { border-color: red; }
+</code></pre>
+</details>
+<details><summary>Operaciones SCSS</summary>
+<pre><code class="language-scss">/* SCSS */
+$ancho-inicial: 30em;
+div { width: $ancho-inicial + 2em; }
+</code></pre>
+</details>
+<details><summary>Operaciones CSS</summary>
+<pre><code class="language-css">/* CSS */
+html { --ancho-inicial: 30em; }
+div { width: calc(var(--ancho-inicial) + 2em); }
+</code></pre>
+</details>
+<p>Estas otras características solo son posibles gracias al <strong>pre-procesado</strong>:</p>
+<details><summary>Interpolación SCSS</summary>
+<pre><code class="language-scss">$pantallas-pequeñas: 36em;
+@media (max-width: #{$pantallas-pequeñas}) {
+  /* reglas para pantallas pequeñas */
+  p { font-size: 150%; }
+}
+</code></pre>
+</details>
+<details><summary>Mixins SCSS</summary>
+<pre><code class="language-scss">@mixin theme($theme: darkgray) {
+  background: $theme;
+  box-shadow: 0 0 1px rgba($theme, .25);
+  color: #fff;
+}
+.info { @include theme; }
+.alerta { @include theme($theme: darkred); }
+.exito { @include theme($theme: darkgreen); }
+</code></pre>
+</details>
+<details><summary>Funciones SCSS</summary>
+<pre><code class="language-scss">@function mas-verde($color) {
+    @return $color + rgb(0,50,0);
+}
+p { background: mas-verde(gray); }
+</code></pre>
+</details>
+<details><summary>Directivas de control</summary>
+<pre><code class="language-scss">$debug: true;
+article {
+    color: black;
+    /* Para comprobar el diseño resaltando los bordes */
+    @if ($debug) { border: 1px dotted red; }
+}
+</code></pre>
+</details>
+<hr />
+<div class="codepen" data-prefill data-height="450" data-default-tab="css,result" data-theme-id="light" data-editable="true" style="opacity:0">
+  <pre data-lang="html">&lt;body>
+&lt;p>Este es un ejemplo de SCSS mixin con el que puedes jugar directamente. Puedes probar el resto de características de Sass en este Codepen.io. El mixin "ellipsis" crea bloques de texto del ancho y número de líneas indicado. Si el contenido ocupa más que el número de líneas indicado, el texto se acorta y se muestra una elipsis ("…").&lt;/p>
+&lt;/body></pre>
+  <pre data-lang="scss" data-option-autoprefixer="true">@mixin ellipsis($lineas: 1, $ancho: 100%) {
+  width: $ancho;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: $lineas;  
+  -webkit-line-clamp: $lineas;
+  -webkit-box-orient: vertical;
+}
+<p>p { @include ellipsis($lineas: 2, $ancho: 20rem); }</pre></div></p>
+<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
+<p>Esto implica tener un sistema de construcción del proyecto que automatice la generación de los CSS finales.</p>
+</div>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="js"><a class="header" href="#js">JS</a></h1>
 
                     </main>
 
